On the verge of being done